--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,87 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Waqas Bin Hamed
+    - name: Location
+      value: Waterloo, ON
     - name: Languages
-      value: English, German
+      value: English, Urdu, Punjabi
 
-- title: Education
-  type: time_table
+- title: Skills
+  type: list
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - "Programming languages: Python, SQL, MATLAB, R, C, Java"
+    - "Programming frameworks and tools: Linux, Docker, Git, QlikView, Tableau, Google Cloud Platform, AWS"
+    - "Other skills: LaTeX, Microsoft Office (Work, Excel, Powerpoint), AutoCAD"
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+    - title: Graduate Student Researcher
+      institution: University of Waterloo
+      year: 09/2022 - 12/2022
+      # description:
+      #   - Description 1.
+      #   - Description 2.
+      #   - title: Description 3.
+      #     contents:
+      #       - Sub-description 1.
+      #       - Sub-description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    - title: Data Scientist
+      institution: Symboticware
+      year: 05/2022 - 08/2022
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
+    - title: Teaching Assistant
+      institution: University of Waterloo 
+      year: 09/2021 - 04/2021
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Data Scientist
+      institution: Big Byte Insights
+      year: 07/2020 - 08/2021
 
-- title: Open Source Projects
+- title: Certifications
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: AWS Cloud Computing Practioner
+      year: 2022
 
+- title: Education
+  type: time_table
+  contents:
+    - title: MMath in Computational Mathematics
+      institution: University of Waterloo
+      year: 2022
+
+    - title: BSc in Environmental Engineering
+      institution: Middle East Technical University
+      year: 2020
+
+    
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2022
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - University of Waterloo (UW) Outstanding Teaching Assistant Award
+    - year: 2021
       items: 
-        - Max Planck Medal
+        - UW International Master's Award of Excellence (IMAE)
+    - year: 2020
+      items: 
+        - Middle East Technical University (METU) Dean's Honor List Award
+        - Graduated with 2nd highest GPA in METU Environmental Engineering Department
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
+
