--- a/_config.yml
+++ b/_config.yml
@@ -58,16 +58,16 @@ plugins:
 author:
   name   : "Waqas Bin Hamed"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Data Scientist | MMath Computational Mathematics"
+  bio    : "Data Scientist | University of Waterloo MMath Computational Math"
   location: "Toronto, ON"
   email: "waqasbinhamed@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:waqasbinhamed@gmail.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://waqasbinhamed.github.io"
+    # - label: "Website"
+    #   icon: "fas fa-fw fa-link"
+    #   url: "https://waqasbinhamed.github.io"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/waqasbinhamed"
